--- a/src/tpl/00-test.twig
+++ b/src/tpl/00-test.twig
@@ -1,5 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Test' %}
+{% set description = 'Testovací popisek' %}
 
 
 {% block content %}
