--- a/src/tpl/layout/layout.twig
+++ b/src/tpl/layout/layout.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
-		<meta name="description" content="">
+		<meta name="description" content="{{ description }}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
 		<meta name="twitter:card" content="summary">
@@ -20,8 +20,7 @@
 		<title>{{ pageTitle }} | Project</title>
 
 		<link rel="stylesheet" href="{{ assets.styles }}styles.css" media="screen,handheld">
-		{# <link rel="stylesheet" href="{{ assets.styles }}style.css" media="screen,handheld"> #}
-		{# <link rel="stylesheet" href="{{ assets.styles }}print.css" media="print"> #}
+		<link rel="stylesheet" href="{{ assets.styles }}print.css" media="print">
 		<link rel="prerender" href="/">
 
 		{% set fonts = [
@@ -85,16 +84,15 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			{# {% include "@components/header/header.twig" %} #}
-
+			{% include "@components/core/header/header.twig" %}
 
 			{% block content %}{% endblock %}
 
-			{# {% include "@components/core/footer/footer.twig" %} #}
-{# 			<div class="modal js-modal">
+			{% include "@components/core/footer/footer.twig" %}
+			<div class="modal js-modal u-hide">
 				<button class="modal__close js-modal-close"></button>
 				<div class="modal__body js-modal-body"></div>
-			</div> #}
+			</div>
 		</div>
 		<script src="/js/runtime.js"></script>
 		{% for script in scripts %}
