--- a/src/tpl/components/core/footer/footer.twig
+++ b/src/tpl/components/core/footer/footer.twig
@@ -1,3 +1,12 @@
-<div class="footer">
-    <h2>TEST FOOTER</h2>
-</div>
+<footer class="footer">
+    <div class="container">
+        <div class="footer__copyright">
+            <h3>Stránky vytvořil: Petr Foldyna</h3>
+            <ul>
+                <li>Kontakt: +420 606 767 826</li>
+                <li>Email: petr.foldyna12@gmail.com</li>
+                <li>IČO: 467 798 632</li>
+            </ul>
+        </div>
+    </div>
+</footer>
