--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -19,7 +19,7 @@ h5,
 h6,
 .h6 {
 	margin: 1.5em 0 0.5em;
-	font-family: $fontSecondary;
+	font-family: $colorText;
 	font-weight: 700;
 	line-height: 1.2;
 	text-transform: uppercase;
@@ -27,17 +27,17 @@ h6,
 h1,
 .h1 {
 	font-size: 35px;
-	color: $colorPrimary;
+	color: $colorText;
 }
 h2,
 .h2 {
 	font-size: 28px;
-	color: $colorPrimary;
+	color: $colorText;
 }
 h3,
 .h3 {
 	font-size: 24px;
-	color: $colorPrimary;
+	color: $colorText;
 	line-height: 1.3;
 }
 h4,
@@ -85,7 +85,7 @@ a {
 	transition: color $t;
 	-webkit-tap-highlight-color: transparent;
 	.hoverevents &:hover {
-		color: $colorPrimary;
+		color: $colorSecondary;
 		text-decoration: none;
 	}
 }
