--- a/src/css/layout/index.scss
+++ b/src/css/layout/index.scss
@@ -1,5 +1,6 @@
 html {
 	box-sizing: border-box;
+	scroll-behavior: smooth;
 }
 *,
 *::before,
@@ -9,8 +10,14 @@ html {
 body {
 	position: relative;
 	min-width: 320px;
+	max-width: 1920px;
+	margin: 0 auto;
 	scroll-behavior: smooth;
 	overflow-x: hidden;
+	background-color: #222222;
+	&.menu-open {
+		overflow: hidden;
+	}
 }
 :first-child {
 	margin-top: 0;
