--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -44,7 +44,8 @@
     }
     &__link {
         text-decoration: none;
-        font-weight: 400;
+        text-transform: uppercase;
+        font-weight: 600;
         font-size: 18px;
         color: $colorBlack;
     }
