--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -25,7 +25,48 @@
                     title: "Kapely",
                     tag: "h2",
                 }} %}
-                <p class="u-text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium qui laborum aliquam tempora accusamus labore pariatur nesciunt atque quam praesentium assumenda, ducimus optio rerum distinctio, ratione neque, voluptatem amet necessitatibus! Aspernatur illo, quae assumenda voluptatem numquam temporibus, ex sit quod voluptate dolore iste repudiandae est! Minima, deserunt quod! Architecto, explicabo! Molestias, consequuntur quae iure saepe molestiae odit? Itaque, enim sint! Corrupti, voluptatum veritatis. Quis ipsam reprehenderit nam repudiandae quae consequuntur, aperiam, explicabo deserunt vel, tempora impedit porro aliquid! Ut, amet mollitia libero accusantium voluptas fuga quia aliquid et numquam laborum voluptate ratione provident, ab iure voluptatibus dolor sit iste doloribus.</p>
+                {% set bands = [
+                    {
+                        title: "Artctic Monkeys",
+                        img: "carousel-band/band1.webp",
+                        link: "/arctic-monkeys.html",
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis voluptates quia libero vel ipsam sunt molestiae optio laudantium nulla totam."
+                    },
+                    {
+                        title: "Artctic Monkeys",
+                        img: "carousel-band/band1.webp",
+                        link: "/arctic-monkeys.html",
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, modi!"
+                    },
+                    {
+                        title: "Artctic Monkeys",
+                        img: "carousel-band/band1.webp",
+                        link: "/arctic-monkeys.html",
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et."
+                    },
+                    {
+                        title: "Artctic Monkeys",
+                        img: "carousel-band/band1.webp",
+                        link: "/arctic-monkeys.html",
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et."
+                    },
+                    {
+                        title: "Artctic Monkeys",
+                        img: "carousel-band/band1.webp",
+                        link: "/arctic-monkeys.html",
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et."
+                    },
+                    {
+                        title: "Artctic Monkeys",
+                        img: "carousel-band/band1.webp",
+                        link: "/arctic-monkeys.html",
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et."
+                    },
+                ]%}
+                {% include "@components/box/carousel-band/carousel-band.twig" with { props: {
+                    loop: true,
+                    content: bands,
+                }} %}
             </div>
         </section>
         <section class="section section--top section--bottom">
