fixed icon svg twig template

--- a/src/tpl/components/core/icon-svg/icon-svg.twig
+++ b/src/tpl/components/core/icon-svg/icon-svg.twig
@@ -11,7 +11,7 @@
 	'icon-svg',
 	props.name ? 'icon-svg--' ~ props.name : null,
 	props.modifier ? props.modifier : null
-] | filter(i => i) | join(' ') %}
+]|filterSafe|join %}
 
 {# Code #}
 <span class="{{ className }}" aria-hidden="true">
