--- a/src/tpl/components/box/carousel-band/carousel-band.twig
+++ b/src/tpl/components/box/carousel-band/carousel-band.twig
@@ -20,12 +20,12 @@
     <div class="carousel-band__controls">
         <div class="embla__button embla__button--prev">
             <button class="embla__button-inner">
-                {# {% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "arrow" }} %} #}
+                {% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "arrow" }} %}
             </button>
         </div>
         <div class="embla__button embla__button--next">
             <button class="embla__button-inner">
-                {# {% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "arrow" }} %} #}
+                {% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "arrow" }} %}
             </button>
         </div>
     </div>
