--- a/src/css/layout/_footer.scss
+++ b/src/css/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background: url($imgPath + '/bg/black-pattern.jpg');
+    background: url($imgPath + '/bg/patterns/black-pattern.jpg');
     background-size: cover;
     &__copyright {
         color: $colorWhite;
