--- a/src/css/components/_carousel-band.scss
+++ b/src/css/components/_carousel-band.scss
@@ -13,12 +13,13 @@
         min-width: 87%;
         border: 24px solid transparent;
         border-width: 0 0 0 24px;
-        border-radius: 8px;
-        overflow: hidden;
         display: flex;
+        overflow: hidden;
     }
     &__img {
+        border-radius: 8px;
         width: 100%;
+        overflow: hidden;
     }
     &__content {
         margin-left: -100%;
@@ -31,12 +32,31 @@
         color: $colorWhite;
         text-decoration: none;
         transition: .3s;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.74) 100%)
+        position: relative;
+        z-index: 1;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.74) 100%);
+        &::after {
+            position: absolute;
+            content: "";
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.94) 70%);
+            transition: opacity $t;
+        }
+    }
+    &__title {
+        z-index: 1;
     }
     &__more {
         height: 0;
         opacity: 0;
         transition: height $t, opacity $t;
+        z-index: 1;
     }
     &__controls {
         display: none;
@@ -57,6 +77,9 @@
             display: flex;
             justify-content: space-between;
             margin-top: 20px;
+        }
+        .hoverevents &__item:hover &__content::after {
+            opacity: 1;
         }
         .hoverevents &__item:hover &__more {
             height: 30%;
