--- a/src/css/components/_parallax.scss
+++ b/src/css/components/_parallax.scss
@@ -1,5 +1,11 @@
  
-  @media ($xlUp) {    
+  .section-parallax {
+    display: none;
+  }
+  @media screen and (min-width: 1600px)  {
+    .section-parallax {
+      display: block;
+    }
     .line-container {
       position: fixed;
       top: 0;
@@ -16,7 +22,7 @@
         left: 90%;
         transform: translate(-50%, -50%);
       
-        animation-name: anigreen;
+        animation-name: animate;
         animation-duration: 0.8s;
         animation-direction: alternate;
         animation-iteration-count: infinite;
@@ -35,22 +41,8 @@
       font-family: "Garamond";
       font-size: 4em;
     }
-    
-    
-    @keyframes animate {
-      0% {
-        filter: drop-shadow(0px 0px 1px #fff) drop-shadow(0px 0px 3px #fff)
-          drop-shadow(0px 0px 10px #ff80b3) drop-shadow(0px 0px 30px #ff4d94)
-          drop-shadow(0px 0px 50px #ff0066);
-      }
-      100% {
-        filter: drop-shadow(0px 0px 1px #fff) drop-shadow(0px 0px 6px #fff)
-          drop-shadow(0px 0px 15px #ff80b3) drop-shadow(0px 0px 40px #ff4d94)
-          drop-shadow(0px 0px 60px #ff0066);
-      }
-    }
-    
-      @keyframes anigreen {
+      
+      @keyframes animate {
         0% {
           filter: drop-shadow(0px 0px 1px #fff) drop-shadow(0px 0px 3px #fff)
             drop-shadow(0px 0px 10px #6be6aad9) drop-shadow(0px 0px 30px #64c294d9
