--- a/src/css/components/_parallax.scss
+++ b/src/css/components/_parallax.scss
@@ -38,7 +38,7 @@
       // height: 100vh;
       display: grid;
       place-content: center;
-      font-family: "Garamond";
+      font-family: $fontSystem;
       font-size: 4em;
     }
       
