--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -39,8 +39,8 @@ $colorPinterest: #bd081c;
 
 // Font
 $fontSystem: -apple-system, blinkmacsystemfont, 'Segoe UI', roboto, helvetica, arial, sans-serif;
-$fontPrimary: 'M05Text', $fontSystem;
-$fontSecondary: 'M05Headline', $fontPrimary;
+$fontPrimary: 'gillsansmt', $fontSystem;
+$fontSecondary: 'gillsansmt', $fontPrimary;
 $fontSize: 18px;
 $lineHeight: 1.5;
 
