--- a/src/css/core/objects/_section.scss
+++ b/src/css/core/objects/_section.scss
@@ -2,15 +2,34 @@
 	&--top {
 		padding-top: 60px;
 	}
+	&--top-lg {
+		padding-top: 12px;
+	}
 	&--bottom {
 		margin-bottom: 60px;
+	}
+	&--bg {
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.8)),
+    url($imgPath + '/illust/bg/publikum.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: top;
+	margin-top: 120px;
+	padding-bottom: 60px;
 	}
 	@media ($xlUp) {
 		&--top {
 			padding-top: 80px;
 		}
+		&--top-lg {
+			padding-top: 160px;
+		}
 		&--bottom {
 			margin-bottom: 80px;
+		}
+		&--bg {
+			margin-top: 160px;
+			padding-bottom: 80px;
 		}
 	}
 }
