--- a/src/tpl/components/box/carousel-band/carousel-band.twig
+++ b/src/tpl/components/box/carousel-band/carousel-band.twig
@@ -13,7 +13,7 @@
                         <h4 class="carousel-band__title">{{ item.title }}</h4>
                         <div class="carousel-band__more">
                             <p class="carousel-band__description">{{ item.description }}</p>
-                            <span class="carousel-band__show-more">Zobrazit více {% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %}</span>
+                            <span class="text-link">Zobrazit více {% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %}</span>
                         </div>
                     </div>
             </a>
