--- a/src/css/components/_carousel-band.scss
+++ b/src/css/components/_carousel-band.scss
@@ -20,6 +20,9 @@
         border-radius: 8px;
         width: 100%;
         overflow: hidden;
+        & img {
+            transition: transform 3s;
+        }
     }
     &__content {
         margin-left: -100%;
@@ -77,6 +80,11 @@
             display: flex;
             justify-content: space-between;
             margin-top: 20px;
+        }
+        .hoverevents &__item:hover &__img {
+            & img {
+                transform: scale(1.2);
+            }
         }
         .hoverevents &__item:hover &__content::after {
             opacity: 1;
