--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -20,7 +20,7 @@
             ]
         }}%}
         <section class="section section-parallax">
-        <div class="line-container">
+        <div class="line-container js-parallax-container">
             <svg
                 class="line"
                 viewBox="0 0 206 2010"
@@ -46,7 +46,7 @@
                         title: "Artctic Monkeys",
                         img: "carousel-band/band1.webp",
                         link: "/arctic-monkeys.html",
-                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis voluptates quia libero vel ipsam sunt molestiae optio laudantium nulla totam."
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, modi!"
                     },
                     {
                         title: "Artctic Monkeys",
@@ -58,25 +58,25 @@
                         title: "Artctic Monkeys",
                         img: "carousel-band/band1.webp",
                         link: "/arctic-monkeys.html",
-                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et."
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, modi!"
                     },
                     {
                         title: "Artctic Monkeys",
                         img: "carousel-band/band1.webp",
                         link: "/arctic-monkeys.html",
-                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et."
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, modi!"
                     },
                     {
                         title: "Artctic Monkeys",
                         img: "carousel-band/band1.webp",
                         link: "/arctic-monkeys.html",
-                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et."
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, modi!"
                     },
                     {
                         title: "Artctic Monkeys",
                         img: "carousel-band/band1.webp",
                         link: "/arctic-monkeys.html",
-                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et."
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, modi!"
                     },
                 ]%}
                 {% include "@components/box/carousel-band/carousel-band.twig" with { props: {
@@ -100,11 +100,6 @@
         <section class="section section--top section--bottom">
             <div class="container">
                 <p class="u-text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium qui laborum aliquam tempora accusamus labore pariatur nesciunt atque quam praesentium assumenda, ducimus optio rerum distinctio, ratione neque, voluptatem amet necessitatibus! Aspernatur illo, quae assumenda voluptatem numquam temporibus, ex sit quod voluptate dolore iste repudiandae est! Minima, deserunt quod! Architecto, explicabo! Molestias, consequuntur quae iure saepe molestiae odit? Itaque, enim sint! Corrupti, voluptatum veritatis. Quis ipsam reprehenderit nam repudiandae quae consequuntur, aperiam, explicabo deserunt vel, tempora impedit porro aliquid! Ut, amet mollitia libero accusantium voluptas fuga quia aliquid et numquam laborum voluptate ratione provident, ab iure voluptatibus dolor sit iste doloribus.</p>
-            </div>
-        </section>
-        <section class="section section--top section--bottom">
-            <div class="container">
-                <p class="u-text-center">Lístky</p>
             </div>
         </section>
 	</main> 
