--- a/src/tpl/Galerie.twig
+++ b/src/tpl/Galerie.twig
@@ -5,104 +5,155 @@
 {% set gallery =[
     {
         img: "gallery/galerie1.webp",
-        link: "#",
+        link: "gallery/galerie1.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie2.webp",
-        link: "#",
+        link: "gallery/galerie2.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie3.webp",
-        link: "#",
+        link: "gallery/galerie3.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie4.webp",
-        link: "#",
+        link: "gallery/galerie4.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie5.webp",
-        link: "#",
+        link: "gallery/galerie5.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie1.webp",
-        link: "#",
+        link: "gallery/galerie1.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie2.webp",
-        link: "#",
+        link: "gallery/galerie2.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie3.webp",
-        link: "#",
+        link: "gallery/galerie3.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie4.webp",
-        link: "#",
+        link: "gallery/galerie4.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie5.webp",
-        link: "#",
+        link: "gallery/galerie5.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie1.webp",
-        link: "#",
+        link: "gallery/galerie1.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie2.webp",
-        link: "#",
+        link: "gallery/galerie2.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie3.webp",
-        link: "#",
+        link: "gallery/galerie3.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie4.webp",
-        link: "#",
+        link: "gallery/galerie4.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie5.webp",
-        link: "#",
+        link: "gallery/galerie5.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie1.webp",
-        link: "#",
+        link: "gallery/galerie1.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie2.webp",
-        link: "#",
+        link: "gallery/galerie2.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie3.webp",
-        link: "#",
+        link: "gallery/galerie3.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie4.webp",
-        link: "#",
+        link: "gallery/galerie4.webp",
         alt: "Popis1",
     },
     {
         img: "gallery/galerie5.webp",
-        link: "#",
+        link: "gallery/galerie5.webp",
         alt: "Popis1",
     },
+    {
+        img: "gallery/galerie1.webp",
+        link: "gallery/galerie1.webp",
+        alt: "Popis1",
+    },
+    {
+        img: "gallery/galerie2.webp",
+        link: "gallery/galerie2.webp",
+        alt: "Popis1",
+    },
+    {
+        img: "gallery/galerie3.webp",
+        link: "gallery/galerie3.webp",
+        alt: "Popis1",
+    },
+    {
+        img: "gallery/galerie4.webp",
+        link: "gallery/galerie4.webp",
+        alt: "Popis1",
+    },
+    {
+        img: "gallery/galerie5.webp",
+        link: "gallery/galerie5.webp",
+        alt: "Popis1",
+    },
+    {
+        img: "gallery/galerie1.webp",
+        link: "gallery/galerie1.webp",
+        alt: "Popis1",
+    },
+    {
+        img: "gallery/galerie2.webp",
+        link: "gallery/galerie2.webp",
+        alt: "Popis1",
+    },
+    {
+        img: "gallery/galerie3.webp",
+        link: "gallery/galerie3.webp",
+        alt: "Popis1",
+    },
+    {
+        img: "gallery/galerie4.webp",
+        link: "gallery/galerie4.webp",
+        alt: "Popis1",
+    },
+    {
+        img: "gallery/galerie5.webp",
+        link: "gallery/galerie5.webp",
+        alt: "Popis1",
+    },
+
 
 ]%}
 
@@ -118,7 +169,9 @@
             <div class="grid grid--center">
                 {% for item in gallery %}
                 <div class="grid__col col-6-12@sm col-4-12@md col-3-12@lg">
-                    {% include "@components/box/gallery-item/gallery-item.twig" %}
+                    {% include "@components/box/gallery-item/gallery-item.twig" with {props: {
+                        galleryName: "firstGallery"
+                    }} %}
                 </div>
                 {% endfor %}
             </div>
