crossroad, galerie, kapely, hero changes

--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -82,7 +82,7 @@ blockquote {
 
 // Links
 a {
-	color: $colorPrimary;
+	color: $colorText;
 	text-decoration: underline;
 	transition: color $t;
 	-webkit-tap-highlight-color: transparent;
