--- a/src/tpl/components/box/hero/hero.twig
+++ b/src/tpl/components/box/hero/hero.twig
@@ -10,8 +10,9 @@
         {% endfor %}
     </div>
     <div class="hero__content">
-        <h1>Dozvuky Léta 2023</h1>
-        <div class="button-wrapper" data-tippy-content="Click to copy button 49">
+        <h1 class="hero__title">Dozvuky Léta 2023</h1>
+        <h4 class="hero__annot">{{ props.annot }}</h4>
+        <div class="button-wrapper u-text-center" data-tippy-content="Click to copy button 49">
           <a href="#tickets" class="btn-glitch" role="button"><span class="btn-glitch__text">Chci lístek</span></a>
         </div>
     </div>
