--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -1,5 +1,5 @@
 {% extends '@layout/layout.twig' %}
-{% set pageTitle = 'Festival Dozvuky léta' %}
+{% set pageTitle = 'Dozvuky léta' %}
 {% set description = 'Domovská stránka festivalu dozvuky léta, konající se v České Třebové' %}
 
 
@@ -8,6 +8,7 @@
 	<main role="main" id="main" class="main">
 		{% include "@components/box/hero/hero.twig" with { props: {
             timeInterval: "8000",
+            annot: "01.9/02.09 v České Třebové, u Stadionu 1666",
             images: [
                 {
                     img: "hero/Waldagang1.jpg",
