--- a/src/tpl/layout/layout.twig
+++ b/src/tpl/layout/layout.twig
@@ -93,15 +93,15 @@
 					},
 					{
 						title: "Kapely",
-						link: "#"
-					},
-					{
-						title: "Novinky",
-						link: "#"
+						link: "/kapely.html"
 					},
 					{
 						title: "Galerie",
 						link: "/galerie.html"
+					},
+					{
+						title: "Novinky",
+						link: "#"
 					},
 					{
 						title: "Informace",
