--- a/src/css/core/objects/buttons/_btn-glitch.scss
+++ b/src/css/core/objects/buttons/_btn-glitch.scss
@@ -5,12 +5,14 @@
     text-decoration: none;
     justify-content: center;
     align-items: center;
-    padding: 14px 18px;
+    padding: 10px 18px 12px;
+    border-radius: 2px;
     font-size: 20px;
     background: linear-gradient(45deg, transparent 5%, $colorSecondary 5%);
     border: 0;
     color: #fff;
-    letter-spacing: 3px;
+    letter-spacing: 1px;
+    font-weight: bold;
     //box-shadow: 6px 0px 0px #00E6F6;
     outline: transparent;
     position: relative;
