--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -1,19 +1,31 @@
 {% extends '@layout/layout.twig' %}
-{% set pageTitle = 'Dozvuky léta - Galerie' %}
-{% set description = 'V galerii stránky dozvuků léta naleznete fotografie z předešlých ročníků festivalu.' %}
+{% set pageTitle = 'Dozvuky léta - Kapely' %}
+{% set description = 'V sekci kapely webových stránek dozvuků léta naleznete informace o kapelách, účinkujících na následujícím ročníku festivalu' %}
 
 {% set crossroads = [
     {
-        img: "crossroad-gallery/galerie1.webp",
+        img: "crossroad-bands/band1.webp",
         alt: "fotografie z festivalu, ročníku 2021",
-        title: "Ročník 2021",
-        link: "/galerie-2021.html",
+        title: "Arctic Monkeys",
+        link: "/arctic-monkeys.html",
     },
     {
-        img: "crossroad-gallery/galerie2.webp",
+        img: "crossroad-bands/band1.webp",
         alt: "fotografie z festivalu, ročníku 2022",
-        title: "Ročník 2022",
-        link: "/galerie-2022.html",
+        title: "Sum 41",
+        link: "#",
+    },
+    {
+        img: "crossroad-bands/band1.webp",
+        alt: "fotografie z festivalu, ročníku 2022",
+        title: "Sum 41",
+        link: "#",
+    },
+    {
+        img: "crossroad-bands/band1.webp",
+        alt: "fotografie z festivalu, ročníku 2022",
+        title: "Sum 41",
+        link: "#",
     },
 ]%}
 
@@ -23,7 +35,7 @@
     <section class="section section--top-lg section--bottom">
         <div class="container">
             {% include "@components/core/title/title.twig" with { props: {
-                title: "Galerie",
+                title: "Kapely",
                 tag: "h2",
             }} %}
             <div class="grid grid--center">
