edited webpack construct to generate files for html as same as it is in src twig structure

--- a/src/tpl/Galerie.twig
+++ b/src/tpl/Galerie.twig
@@ -7,13 +7,13 @@
         img: "crossroad-gallery/galerie1.webp",
         alt: "fotografie z festivalu, ročníku 2021",
         title: "Ročník 2021",
-        link: "/galerie-2021.html",
+        link: "/gallery/galerie-2021.html",
     },
     {
         img: "crossroad-gallery/galerie2.webp",
         alt: "fotografie z festivalu, ročníku 2022",
         title: "Ročník 2022",
-        link: "/galerie-2022.html",
+        link: "/gallery/galerie-2022.html",
     },
 ]%}
 
