--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -7,7 +7,7 @@
         img: "crossroad-bands/band1.webp",
         alt: "fotografie z festivalu, ročníku 2021",
         title: "Arctic Monkeys",
-        link: "/arctic-monkeys.html",
+        link: "/kapely/arctic-monkeys.html",
     },
     {
         img: "crossroad-bands/band1.webp",
