--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -46,7 +46,7 @@
                     {
                         title: "Artctic Monkeys",
                         img: "carousel-band/band1.webp",
-                        link: "/arctic-monkeys.html",
+                        link: "/kapely/arctic-monkeys.html",
                         description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, modi!"
                     },
                     {
