--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -4,10 +4,10 @@
 
 {% set crossroads = [
     {
-        img: "crossroad-bands/band1.webp",
-        alt: "fotografie z festivalu, ročníku 2021",
-        title: "Arctic Monkeys",
-        link: "/kapely/arctic-monkeys.html",
+        img: "crossroad-bands/band2.webp",
+        alt: "fotografie kapely 375 m.n.m",
+        title: "375 m.n.m",
+        link: "/kapely/375nm.html",
     },
     {
         img: "crossroad-bands/band1.webp",
