--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -44,9 +44,9 @@
                 }} %}
                 {% set bands = [
                     {
-                        title: "Artctic Monkeys",
-                        img: "carousel-band/band1.webp",
-                        link: "/kapely/arctic-monkeys.html",
+                        title: "375 m.n.m",
+                        img: "carousel-band/band2.webp",
+                        link: "/kapely/375nm.html",
                         description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, modi!"
                     },
                     {
