--- a/src/tpl/components/box/main-image/main-image.twig
+++ b/src/tpl/components/box/main-image/main-image.twig
@@ -1,3 +1,11 @@
 <div class="main-image">
-    test2222
+    <div class="main-image__img">
+        {% include "@components/core/image/image.twig" with { item: {
+            img: props.img,
+            alt: props.alt,
+        }} %} 
+    </div>
+    <div class="main-image__content">
+        <h1 class="main-image__title">{{ props.title }}</h1>
+    </div>
 </div>
