--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -26,6 +26,14 @@ h6,
 	letter-spacing: 0.02em;
 }
 h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3 {
+	text-transform: uppercase;
+}
+h1,
 .h1 {
 	font-size: 35px;
 	color: $colorText;
