--- a/src/css/components/_hero.scss
+++ b/src/css/components/_hero.scss
@@ -38,6 +38,7 @@
         top: 50%;
         width: 100%;
         text-align: center;
+        text-transform: uppercase;
         transform: translate(0, -50%);
     }
     &__title {
