--- a/src/css/components/_main-image.scss
+++ b/src/css/components/_main-image.scss
@@ -14,6 +14,9 @@
         justify-content: flex-end;
         padding: 20px;
     }
+    &__title {
+        margin-bottom: 0;
+    }
     @media($mdUp) {
         &__img {
             & img {
