--- a/src/css/core/objects/buttons/_btn-glitch.scss
+++ b/src/css/core/objects/buttons/_btn-glitch.scss
@@ -13,6 +13,7 @@
     color: #fff;
     letter-spacing: 1px;
     font-weight: bold;
+    text-transform: uppercase;
     //box-shadow: 6px 0px 0px #00E6F6;
     outline: transparent;
     position: relative;
